# AMP_for_hardware

./: .gitignore
datasets/go1_nmpc_wbc_motions_20260318_1805/: go1_nmpc_20260318_180622_002.txt  go1_nmpc_20260318_180633_003.txt  go1_nmpc_20260318_182218_004.txt  go1_nmpc_20260318_182229_005.txt  go1_nmpc_20260318_184108_001.txt
deploy_gazebo/: export_onnx.py
deploy_mujoco/: deploy_mujoco.py
deploy_mujoco/configs/: a1.yaml  go1.yaml
deploy_mujoco/joy_ws/src/deploy_mujoco/: CMakeLists.txt  package.xml
deploy_mujoco/joy_ws/src/deploy_mujoco/config/: joy.yaml
deploy_mujoco/joy_ws/src/deploy_mujoco/launch/: joy_teleop.launch
legged_gym/envs/: __init__.py
legged_gym/envs/a1/: a1_amp_config.py
legged_gym/envs/base/: legged_robot.py  legged_robot_config.py
legged_gym/envs/go1/: go1_amp_config.py
legged_gym/scripts/: record_policy.py
resources/robots/go1/urdf/: go1.urdf
resources/robots/go1/xml/: go1.xml
rsl_rl/rsl_rl/runners/: amp_on_policy_runner.py
rsl_rl/rsl_rl/utils/: utils.py
